fixed background alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1624,7 +1624,6 @@
 
 	body {
 		background-color: #2e3141;
-		background-image: url("../../images/bg.jpg");
 		background-size: auto, cover;
 		background-attachment: fixed, fixed;
 		background-position: center, center;
@@ -3099,6 +3098,9 @@
 
 	#banner {
 		padding: 10em 0 4.75em 0 ;
+		background-image: url("../../images/bg.jpg");
+		background-repeat: no-repeat;
+		background-position: center, center;
 	}
 
 		#banner .inner {
@@ -3186,7 +3188,7 @@
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
-				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+				background-image: url("../../images/bg.jpg");
 				background-size: auto, cover;
 				background-position: center, center;
 				margin-bottom: -6.5em;
